--- a/mesopracticeOldDataset.ipynb
+++ b/mesopracticeOldDataset.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V5E1",
-      "authorship_tag": "ABX9TyOnFnnvciW/xtDpuzOFr92s",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +14,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -30,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "ItJ2ZTNMZMVk",
-        "outputId": "dadb4dc9-495a-4626-b265-269a136f6b2b"
+        "outputId": "e5ec099b-e2e1-413e-b167-7b0a06c73601"
       },
       "outputs": [
         {
@@ -109,7 +108,7 @@
       "metadata": {
         "id": "CJpX1E5pZS03"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,7 +135,7 @@
       "metadata": {
         "id": "hzIZG6oSZV6b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -189,7 +188,7 @@
       "metadata": {
         "id": "y2u3eUzVZUpW"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -203,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7zoe35IZa3N",
-        "outputId": "76d4d1f1-4682-4af2-821f-95aaa23c174e"
+        "outputId": "eb70bc3d-009f-4b0b-bbc4-e31643e642dc"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,9 +226,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4-2fzJ0QZbop",
-        "outputId": "c08740c8-6146-46f6-9372-e7686df5cc20"
+        "outputId": "6249f8de-2c31-4e93-ee58-67b72ea67a12"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,9 +252,9 @@
         },
         "collapsed": true,
         "id": "mefRK6xCZdZj",
-        "outputId": "073e4887-846d-4528-d653-d5b7fbdd8e32"
+        "outputId": "1076fc72-7621-4a2d-adb4-6ecd8987930f"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,8 +275,7 @@
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from kaggle) (4.67.1)\n",
             "Requirement already satisfied: urllib3>=1.15.1 in /usr/local/lib/python3.12/dist-packages (from kaggle) (2.5.0)\n",
             "Requirement already satisfied: webencodings in /usr/local/lib/python3.12/dist-packages (from kaggle) (0.5.1)\n",
-            "Collecting opendatasets\n",
-            "  Downloading opendatasets-0.1.22-py3-none-any.whl.metadata (9.2 kB)\n",
+            "Requirement already satisfied: opendatasets in /usr/local/lib/python3.12/dist-packages (0.1.22)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from opendatasets) (4.67.1)\n",
             "Requirement already satisfied: kaggle in /usr/local/lib/python3.12/dist-packages (from opendatasets) (1.7.4.5)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from opendatasets) (8.3.1)\n",
@@ -293,10 +291,7 @@
             "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.12/dist-packages (from kaggle->opendatasets) (1.17.0)\n",
             "Requirement already satisfied: text-unidecode in /usr/local/lib/python3.12/dist-packages (from kaggle->opendatasets) (1.3)\n",
             "Requirement already satisfied: urllib3>=1.15.1 in /usr/local/lib/python3.12/dist-packages (from kaggle->opendatasets) (2.5.0)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.12/dist-packages (from kaggle->opendatasets) (0.5.1)\n",
-            "Downloading opendatasets-0.1.22-py3-none-any.whl (15 kB)\n",
-            "Installing collected packages: opendatasets\n",
-            "Successfully installed opendatasets-0.1.22\n"
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.12/dist-packages (from kaggle->opendatasets) (0.5.1)\n"
           ]
         }
       ]
@@ -309,46 +304,29 @@
       "metadata": {
         "id": "CASFPVpPZfOG"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "od.download ('https://www.kaggle.com/datasets/xhlulu/140k-real-and-fake-faces')"
+        "od.download ('https://www.kaggle.com/datasets/wish096/realvsfake-81k-by-wish')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "urCWJQAcZhQf",
-        "outputId": "2873c9f1-c638-45f3-8ec8-4bcaaaf562b2"
+        "outputId": "9ca1d0b4-77a2-4cc2-c804-4e275ecbdee5",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
-            "Your Kaggle username: nadim007\n",
-            "Your Kaggle Key: ··········\n",
-            "Dataset URL: https://www.kaggle.com/datasets/xhlulu/140k-real-and-fake-faces\n",
-            "Downloading 140k-real-and-fake-faces.zip to ./140k-real-and-fake-faces\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 3.75G/3.75G [00:53<00:00, 74.7MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n"
+            "Skipping, found downloaded files in \"./realvsfake-81k-by-wish\" (use force=True to force download)\n"
           ]
         }
       ]
@@ -356,14 +334,62 @@
     {
       "cell_type": "code",
       "source": [
-        "od.download ('https://www.kaggle.com/datasets/dewannadim/meso-dataset-for-test-and-train')"
+        "od.download ('https://www.kaggle.com/datasets/shahzaibshazoo/detect-ai-generated-faces-high-quality-dataset')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0tUaNjAurJnm",
-        "outputId": "58f94d4a-73a2-45a3-fb3d-534091d3d1f1"
+        "outputId": "dafaddb2-5301-4b08-cb90-8f08f6777ba4",
+        "collapsed": true
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping, found downloaded files in \"./detect-ai-generated-faces-high-quality-dataset\" (use force=True to force download)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "od.download ('https://www.kaggle.com/datasets/kshitizbhargava/deepfake-face-images')"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "10uW2cZ9KSdp",
+        "outputId": "ae16f78e-8f1c-4d15-a9f2-ddb914f57770",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping, found downloaded files in \"./deepfake-face-images\" (use force=True to force download)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "od.download ('https://www.kaggle.com/datasets/prithivsakthiur/deepfake-vs-real-20k')"
+      ],
+      "metadata": {
+        "id": "uXY_AWZILVuI",
+        "outputId": "930e7b95-0f18-4758-a300-d1cde0c661b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -372,24 +398,9 @@
           "name": "stdout",
           "text": [
             "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
-            "Your Kaggle username: nadim007\n",
+            "Your Kaggle username: dewannadim\n",
             "Your Kaggle Key: ··········\n",
-            "Dataset URL: https://www.kaggle.com/datasets/dewannadim/meso-dataset-for-test-and-train\n",
-            "Downloading meso-dataset-for-test-and-train.zip to ./meso-dataset-for-test-and-train\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1.32G/1.32G [00:26<00:00, 53.9MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n"
+            "Dataset URL: https://www.kaggle.com/datasets/prithivsakthiur/deepfake-vs-real-20k\n"
           ]
         }
       ]
@@ -403,9 +414,9 @@
         "dataGenerator = ImageDataGenerator(rescale=1./255)\n",
         "# Instantiating generator to feed images through the network\n",
         "generator = dataGenerator.flow_from_directory(\n",
-        "    '/content/140k-real-and-fake-faces/real_vs_fake/real-vs-fake/train',\n",
+        "    '/content/realvsfake-81k-by-wish/RealVsFake/RealVsFake',\n",
         "    target_size=(256, 256),\n",
-        "    batch_size=100, # Using the batch_size variable defined previously\n",
+        "    batch_size=1000, # Using the batch_size variable defined previously\n",
         "    class_mode='binary')\n",
         "#'/content/python-youtube-code/Deepfake-detection/data'"
       ],
@@ -1000,23 +1011,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 158
         },
         "id": "Ns4SLn-Ez1ut",
-        "outputId": "7e6efd4c-fc10-4965-a360-802249e33e53",
+        "outputId": "ac40edc2-c047-4b51-e617-133aa913e78a",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "error",
           "ename": "NameError",
-          "evalue": "name 'new_train_generator' is not defined",
+          "evalue": "name 'generator' is not defined",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
             "\u001b[0;32m/tmp/ipython-input-2847472508.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtotal_images_trained\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msamples\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnew_train_generator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Total number of images fed for training: {total_images_trained}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'new_train_generator' is not defined"
+            "\u001b[0;31mNameError\u001b[0m: name 'generator' is not defined"
           ]
         }
       ]
